Version 0.2.X - Release date 2007-??-??
-----------------------------------------------------

- Relative basedir in build.xml